--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
+"scripts": {
+  "vercel-build": "npm install --legacy-peer-deps && npm run build"
+},
 {
   "buildCommand": "npm install --legacy-peer-deps && npm run build",
   "installCommand": "npm install --legacy-peer-deps",
