--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "typescript": "5.6.2",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5",
+"eslint-config-next": "15.0.0"
     "tailwindcss": "3.4.14",
     "postcss": "8.4.47",
     "autoprefixer": "10.4.20"
