--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
   "overrides": {
     "eslint": "8.57.0"
   },
-  "dependencies": { ... },
+  "dependencies": {
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "zod": "3.23.8",
+    "@supabase/supabase-js": "2.45.4",
+    "stripe": "16.0.0",
+    "lucide-react": "0.460.0",
+    "clsx": "2.1.1",
+    "@clerk/nextjs": "5.6.3"
+  },
   "devDependencies": {
     "typescript": "5.6.2",
     "eslint": "8.57.0",
@@ -21,4 +31,5 @@
     "autoprefixer": "10.4.20"
   }
 }
+
 
